test/official_tests/string/error_after_multiline.lox
// Tests that we correctly track the line info across multiline strings.
var a = "1
2
3
";

err; // error: {"line":7,"message":"Undefined variable 'err'","type":"RuntimeError"}